# albGL

./: CMakeLists.txt  README.md
src/: MyApp.cpp  MyApp.h  main.cpp
src/Core/: Application.cpp  Application.h
src/Transform/: Transform.cpp  Transform.h  Vector3.cpp  Vector3.h
src/primitiveObjects/: Ellipse.cpp  Ellipse.h  Mesh.cpp  Mesh.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
